update gc performance